# foil-board-toolkit

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: domain-language.md  legal-and-ethics.md  mvp-plan.md  product-brief.md  reference-ratios.md  reference-sources.md  research-plan.md  visual-review.md
docs/adr/: 0001-original-generator-not-clone-library.md
examples/: beginner-sup-foil-122l.json  compact-wing-50l.json  downwind-sup-86l.json  midlength-wing-114l.json  midlength-wing-85l.json  pump-13l.json  wind-foil-193l.json
src/foil_board_toolkit/: __init__.py  cli.py  geometry.py  report.py  spec.py  svg.py
tests/: test_generator.py  test_placeholder.py
tools/: regenerate_examples.py
